libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/index-1.jsonc
//@ run: fail
//@ description: index/1 should error out
["::kernel::special_form::index", "x"]
//~^ ERROR Add missing arguments
